# corona-simulator

./: CMakeLists.txt  README.md  config4.json  makefile  output.json  output2.json  output3.json  output4.json
include/: Agent.h  Graph.h  Session.h  Tree.h  json.hpp
src/: Agent.cpp  Graph.cpp  Session.cpp  Tree.cpp  main.cpp
